updated configs and fix initializing of kestrel

--- a/SmaAuthorizationService/SmaAuthorizationService/appsettings.json
+++ b/SmaAuthorizationService/SmaAuthorizationService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySql": {
-    "Host": "localhost",
+    "Host": "192.168.99.1",
     "Port": 3307,
     "UserId": "root",
     "Password": "secret",
