update login info for usert

--- a/SmaAuthorizationService/SmaAuthorizationService/appsettings.json
+++ b/SmaAuthorizationService/SmaAuthorizationService/appsettings.json
@@ -1,9 +1,9 @@
 {
   "MySql": {
-    "Host": "192.168.99.1",
-    "Port": 3307,
+    "Host": "89.208.196.51",
+    "Port": 3306,
     "UserId": "root",
-    "Password": "secret",
+    "Password": "admin1234",
     "SslMode": "none",
     "Database": "smaauth",
     "CharacterSet": "utf8"
